--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Webpack</title>
-    <link rel="stylesheet" href="../style.c7cdfffafea6af54cfde.css?ddd6828753ab90e7d96a">
+    <link rel="stylesheet" href="../style.c7cdfffafea6af54cfde.css?2baa089979c99513a8e8">
 </head>
 <body>
   <div class="page">
@@ -12,7 +12,7 @@
         <div class="header__logo">
         </div>
         <div class="header__column-links">
-          <a class="header__column-link" href="../../">Главная</a>
+          <a class="header__column-link" href="/">Главная</a>
           <a class="header__column-link" href="../about/">О проекте</a>
           <a class="header__column-link" href="../news/">Сохранённые статьи</a>
           <a class="header__column-link" href="">Авторизоваться</a>
@@ -95,6 +95,6 @@
       </div>
     </footer>
   </div>
-    <script src="../main.ddd6828753ab90e7d96a.js?ddd6828753ab90e7d96a"></script>
+    <script src="../main.31aa8026d22272c4a9f8.js?2baa089979c99513a8e8"></script>
 </body>
 </html>
