--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         </div>
         <div class="header__column-links">
           <a class="header__column-link" href="./">Главная</a>
-          <a class="header__column-link" href="./pages/about/index.html">О проекте</a>
-          <a class="header__column-link" href="./pages/news/">Сохранённые статьи</a>
+          <a class="header__column-link" href="./src/pages/about/">О проекте</a>
+          <a class="header__column-link" href="./src/pages/news/">Сохранённые статьи</a>
           <a class="header__column-link" href="">Авторизоваться</a>
         </div>
     </div>
@@ -90,6 +90,6 @@
       </div>
     </footer>
   </div>
-    <script src="main.ddd6828753ab90e7d96a.js"></script>
+    <script src="main.31aa8026d22272c4a9f8.js"></script>
 </body>
 </html>
