--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         </div>
         <div class="header__column-links">
           <a class="header__column-link" href="./">Главная</a>
-          <a class="header__column-link" href="./src/pages/about/">О проекте</a>
-          <a class="header__column-link" href="./src/pages/news/">Сохранённые статьи</a>
+          <a class="header__column-link" href="./about/">О проекте</a>
+          <a class="header__column-link" href="./news/">Сохранённые статьи</a>
           <a class="header__column-link" href="">Авторизоваться</a>
         </div>
     </div>
@@ -90,6 +90,6 @@
       </div>
     </footer>
   </div>
-    <script src="main.2baa089979c99513a8e8.js"></script>
+    <script src="main.6334542ddb7272fee549.js"></script>
 </body>
 </html>
