--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Webpack</title>
-    <link rel="stylesheet" href="../style.c7cdfffafea6af54cfde.css?6334542ddb7272fee549">
+    <link rel="stylesheet" href="../style.c7cdfffafea6af54cfde.css?759070e88de15dc658b0">
 </head>
 <body>
   <div class="page">
@@ -12,7 +12,7 @@
         <div class="header__logo">
         </div>
         <div class="header__column-links">
-          <a class="header__column-link" href="/">Главная</a>
+          <a class="header__column-link" href="./">Главная</a>
           <a class="header__column-link" href="../about/">О проекте</a>
           <a class="header__column-link" href="../news/">Сохранённые статьи</a>
           <a class="header__column-link" href="">Авторизоваться</a>
@@ -95,6 +95,6 @@
       </div>
     </footer>
   </div>
-    <script src="../main.6334542ddb7272fee549.js?6334542ddb7272fee549"></script>
+    <script src="../main.759070e88de15dc658b0.js?759070e88de15dc658b0"></script>
 </body>
 </html>
