--- a/about/index.html
+++ b/about/index.html
@@ -1,100 +1,109 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Webpack</title>
-    <link rel="stylesheet" href="../style.c7cdfffafea6af54cfde.css?aa005ae5a1f1f494b8fd">
+  <meta charset="UTF-8">
+  <title>News Explorer</title>
+  <meta name="author" content="Vladimir Bulanyi">
+  <meta name="description" content="Diploma project">
+  <link rel="stylesheet" href="../index.584e8bb617f14978e066.css?d7c410a9e66739131630">
 </head>
+
 <body>
   <div class="page">
-    <header  class="header">
-      <div class="header__columns">
-        <div class="header__logo">
-        </div>
-        <div class="header__column-links">
-          <a class="header__column-link" href="../">Главная</a>
-          <a class="header__column-link" href="../about/">О проекте</a>
-          <a class="header__column-link" href="../news/">Сохранённые статьи</a>
-          <a class="header__column-link" href="">Авторизоваться</a>
-        </div>
-    </div>
+    <header class="header header_white">
+      <nav class="menu">
+        <a class="menu__logo menu__logo_black" href="../">NewsExplorer</a>
+        <ul class="menu__column-links">
+          <li class="menu__item"><a class="menu__column-link menu__colunm-link_black" href="../">Главная</a></li>
+          <li class="menu__item menu__item_active"><a class="menu__column-link menu__colunm-link_grey"
+              href="../about/">О проектке</a></li>
+          <li class="menu__item"><a class="menu__column-link menu__colunm-link_black" href="../news/">Сохранённые
+              статьи</a></li>
+          <li class="menu__item"><a
+              class="menu__column-link menu__colunm-link_black menu__link-auth menu__link-auth_black" href="">Грета
+              [-></a></li>
+        </ul>
+      </nav>
     </header>
-
-    <main class="content">
-      <section class="client">
-        <h2 class="client__title">Клиентам</h2>
-        <div class="client__text-container">
-        <p class="client__text">Этот сайт — дипломный проект студента Яндекс.Практикума. Его цель — показать, чему научился студент, какими технологиями владеет.
-        </p>
-        <p class="client__text">Вёрстка сайта выполнена по методологии БЭМ. Это делает сайт гибким и масштабируемым. Кроме того, добавлять новые страницы и функциональность проще и быстрее, чем в проектах, выполненных по другим методологиям. Также сайт проще и дешевле поддерживать.
-        </p>
-        <p class="client__text">Студент самостоятельно написал серверный код. В нём реализована функциональность регистрации и входа в систему. Сайт позволяет искать новости за прошедшую неделю и сохранять понравившиеся в личном кабинете. На сервере избранные новости хранятся в базе данных Mongo DB. Студент запрограммировал надёжный сервер: отказоустойчивый и безопасный.</p>
-        <p class="client__text">При создании проекта была использована сборка технологией Webpack. Это современный подход к разработке сайтов. Код оптимизируется, а значит, сайт работает быстрее. Также сайт работает в старых браузерах. Даже если посетители — пользователи старых операционных систем, у них не будет проблем с отображением. А значит, потенциальная аудитория возрастает.</p>
-        <p class="client__text">Проект был проверен экспертами Яндекс.Практикума. Если вашему бизнесу нужен сайт, мы рекомендуем обратиться к этому студенту.</p>
+    <main class="customers">
+      <h2 class="customers__title">Клиентам</h2>
+      <div class="customers__text">
+        <p class="customers__text-item">Этот сайт — дипломный проект студента Яндекс.Практикума. Его цель —
+          показать,
+          чему научился студент, какими технологиями владеет.</p>
+        <p class="customers__text-item">Вёрстка сайта выполнена по методологии БЭМ. Это делает сайт гибким и
+          масштабируемым. Кроме того, добавлять новые страницы и функциональность проще и быстрее, чем в проектах,
+          выполненных по другим методологиям. Также сайт проще и дешевле поддерживать.</p>
+        <p class="customers__text-item">Студент самостоятельно написал серверный код. В нём реализована
+          функциональность регистрации и входа в систему. Сайт позволяет искать новости за прошедшую неделю и
+          сохранять
+          понравившиеся в личном кабинете. На сервере избранные новости хранятся в базе данных Mongo DB. Студент
+          запрограммировал надёжный сервер: отказоустойчивый и безопасный.</p>
+        <p class="customers__text-item">При создании проекта была использована сборка технологией Webpack. Это
+          современный подход к разработке сайтов. Код оптимизируется, а значит, сайт работает быстрее. Также сайт
+          работает в старых браузерах. Даже если посетители — пользователи старых операционных систем, у них не будет
+          проблем с отображением. А значит, потенциальная аудитория возрастает.</p>
+        <p class="customers__text-item">Проект был проверен экспертами Яндекс.Практикума. Если вашему бизнесу нужен
+          сайт, мы рекомендуем обратиться к этому студенту.</p>
       </div>
-      </section>
-
-      <section class="tehnologies">
-        <h2 class="tehnologies__title"></h2>
-        <div class="tehnologies__container">
-          <span class="tehnologies__name">HTML</span>
-          <img class="tehnologies__logo" src="" alt="HTML logo">
-        </div>
-        <div class="tehnologies__container">
-            <span class="tehnologies__name">CSS</span>
-            <img class="tehnologies__logo" src="" alt="CSS logo">
-        </div>
-        <div class="tehnologies__container">
-            <span class="tehnologies__name">Java Script</span>
-            <img class="tehnologies__logo" src="" alt="Java Script logo">
-        </div>
-        <div class="tehnologies__container">
-            <span class="tehnologies__name">Webpack</span>
-            <img class="tehnologies__logo" src="" alt="Webpack logo">
-        </div>
-      </section>
-
-      <section class="about">
-        <img class="about__avatar" src="" alt="">
-        <div class="about__content">
-          <h2 class="about__title">Об авторе</h2>
-          <p class="about__text">Это блок с описанием автора проекта. Здесь следует указать, как вас зовут, чем вы занимаетесь, какими технологиями разработки владеете.
-            Также можно рассказать о процессе обучения в Практикуме, чему вы тут научились, и чем можете помочь потенциальным заказчикам.</p>
-        </div>
-      </section>
-
-      <section class="git">
-          <h2 class="git__title">История коммитов из GitHubОткрыть в  Github </h2>
-          <a class="git__about" href="">Открыть в  Github &#62</a>
-
-          <div class="git__card">
-            <span class="git__date">14 августа, 2019</span>
-            <img class="git__photo" src="" alt="">
-            <h3 class="git__auther">Антон Долинин</h3>
-            <span class="git__email">anton@yandex.ru</span>
-            <p class="git__text">Emmet (formerly Zen Coding) is a web-
-                developer’s toolkit that can greatly improve your HTML & CSS workflow.</p>
-          </div>
-      </section>
-
     </main>
-    <footer class="footer">
-      <div class="footer__columns">
-        <div class="footer__column copyright">
-          <div class="footer__author">&copy;   2019. Владимир Буланый</div>
-        </div>
-        <div class="footer__column-links">
-            <a class="footer__column-link" href="#">Главная</a>
-            <a class="footer__column-link" href="#">О проектк</a>
-            <a class="footer__column-link" href="#">Яндекс.Практикум</a>
-        </div>
-        <div class="footer__column social">
-            <a class="footer__social-link" href="#"><img class="footer__social-links-logo" src="./imagefacebook_white.svg" alt="facebook logo"></a>
-            <a class="footer__social-link" href="#"><img class="footer__social-links-logo" src="./imagegithub.svg" alt="github logo"></a>
+    <section class="technology">
+      <div class="technology__wrapper">
+        <h2 class="technology__title">Используемые технологии</h2>
+        <div class="technology__container">
+          <div class="technology__item">
+            <span class="technology__item-name">HTML</span>
+            <img class="technology__item-logo" src="" alt="">
           </div>
+          <div class="technology__item">
+            <span class="technology__item-name">CSS</span>
+            <img class="technology__item-logo" src="" alt="">
+          </div>
+          <div class="technology__item">
+            <span class="technology__item-name">Java Script</span>
+            <img class="technology__item-logo" src="" alt="">
+          </div>
+          <div class="technology__item">
+            <span class="technology__item-name">Webpack</span>
+            <img class="technology__item-logo" src="" alt="">
+          </div>
+        </div>
+      </div </section>
+      <section class="about">
+          <div class="about__photo">
+
+<!-- ФОТО -->
+
+
+          </div>
+          <div class="about__content">
+            <h2 class="about__title">Об авторе</h2>
+            <p class="about__text">Это блок с описанием автора проекта. Здесь следует указать, как вас зовут, чем вы
+              занимаетесь, какими технологиями разработки владеете.
+              <br>
+              <br>
+              Также можно рассказать о процессе обучения в Практикуме, чему вы тут научились, и чем можете помочь
+              потенциальным заказчикам.</p>
+          </div>
+        </section>
+      <footer class="footer">
+      <p class="footer__copyright footer__copyright_grey">&copy; 2019. Владимир Буланый</p>
+      <nav>
+        <ul class="footer__menu">
+          <li class="footer__menu-link"><a href="./">Главная</a></li>
+          <li class="footer__menu-link"><a href="./about">О проектке</a></li>
+          <li class="footer__menu-link"><a href="https://praktikum.yandex.ru">Яндекс.Практикум</a></li>
+        </ul>
+      </nav>
+      <div class="footer__social">
+        <!-- Вставить картинки GIT FB -->
+        <a class="footer__social-link" href="https://github.com/VBulanyi/"></a>
+        <a class="footer__social-link" href="#"></a>
       </div>
-    </footer>
+      </footer>
+      <script src="../about/about.d7c410a9e66739131630.js?d7c410a9e66739131630"></script>
   </div>
-    <script src="../main.aa005ae5a1f1f494b8fd.js?aa005ae5a1f1f494b8fd"></script>
 </body>
+
 </html>
