--- a/index.html
+++ b/index.html
@@ -1,95 +1,148 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Webpack</title>
-    <link rel="stylesheet" href="style.c7cdfffafea6af54cfde.css">
+  <meta charset="UTF-8">
+  <meta name="author" content="Vladimir Bulanyi">
+  <meta name="description" content="Diploma project">
+  <title>News Explorer</title>
+  <link rel="stylesheet" href="index.5866e7029a41c9db5507.css">
 </head>
+
 <body>
   <div class="page">
-    <header  class="header">
-      <div class="header__columns">
-        <div class="header__logo">
-        </div>
-        <div class="header__column-links">
-          <a class="header__column-link" href="./">Главная</a>
-          <a class="header__column-link" href="./about/">О проекте</a>
-          <a class="header__column-link" href="./news/">Сохранённые статьи</a>
-          <a class="header__column-link" href="">Авторизоваться</a>
+    <div class="content">
+      <header class="header">
+        <nav class="menu">
+          <a class="menu__logo" href="./">NewsExplorer</a>
+          <ul class="menu__column-links">
+            <li class="menu__item menu__item_active"><a class="menu__column-link menu__column-link_active"href="./">Главная</a></li>
+            <li class="menu__item"><a class="menu__column-link" href="./about/">О проекте</a></li>
+            <li class="menu__item"><a class="menu__column-link" href="./news/">Сохранённые статьи</a></li>
+            <li class="menu__item"><a class="menu__column-link  menu__link-auth" href="">Авторизоваться</a></li>
+          </ul>
+        </nav>
+        <div class="header__wrapper">
+          <h1 class="header__title title">Что в мире творится?</h1>
+          <p class="header__description description">Находите самые свежие статьи на любую тему и сохраняйте в своём
+            личном кабинете.</p>
+          <form novalidate class="header__bar" name="news-search" method="POST">
+            <input class="header__input" type="text" placeholder="Природа">
+            <button class="button header-search__button">Искать</button>
+          </form>
         </div>
     </div>
     </header>
-
-    <main class="content">
-      <section class="search">
-        <h1 class="search__title title">Что в мире творится?</h1>
-        <p class="search__description description">Находите самые свежие статьи на любую тему и сохраняйте в своём личном кабинете.</p>
-        <div class="searsh__bar">
-          <input class="search__input" type="text" placeholder="Природа">
-          <button class="search__button">Искать</button>
+    <main>
+      <section class="preloader">
+        <div class="preloader__wrapper preloader__wrapper_search">
+          <i class="preloader__circle"></i>
+          <span class="preloader__search-text">Идет поиск новостей...</span>
+        </div>
+        <div class="preloader__wrapper preloader__wrapper_not-found">
+          <!-- <img class="preloader__not-found-img" src="/src/images/not-found.svg" alt="Картинка ничего не найдено"> -->
+          <h3 class="preloader__search-title">Ничего не найдено</h3>
+          <span class="preloader__search-text">К сожалению по вашему запросу
+            ничего не найдено...</span>
         </div>
       </section>
 
       <section class="results">
-        <div class="results__container_main">
+        <div class="results__main-container">
           <h2 class="results__title">Результаты поиска</h2>
-          <div class="results__container">
-            <div class="results-card">
-              <div class="results-card__image">
-                <div class="results-card__label"></div>
+          <div class="results__continer">
+            <div class="card">
+              <div class="card__image">
+                <div class="card__backgronud"></div>
+                <div class="card__bookmark"></div>
+                <span class="card__bookmark-notification card__bookmark-notification_loged-in">Войдите, чтобы сохранять статьи</span>
               </div>
-              <div class="results-card__content">
-                <span class=" results-card__date"></span>
-                <h3 class="results-card__title"></h3>
-                <p class="results-card__text"></p>
-                <span class="results-card__source"></span>
+              <div class="card__content">
+                <span class="card__date">2 августа, 2019</span>
+                <h3 class="card__title">Национальное достояние – парки</h3>
+                <p class="card__text">В 2016 году Америка отмечала важный юбилей: сто лет назад здесь начала
+                  складываться система национальных парков – охраняемых территорий, где и сегодня каждый может
+                  приобщиться к природе.</p>
+                <span class="card__source">ЛЕНТА.РУ</span>
               </div>
             </div>
-            <div class="results-card"></div>
-            <div class="results-card"></div>
+            <div class="card">
+              <div class="card__image">
+                <div class="card__backgronud"></div>
+                <div class="card__bookmark"></div>
+                <span class="card__bookmark-notification card__bookmark-notification_loged-in">Войдите, чтобы сохранять статьи</span>
+              </div>
+              <div class="card__content">
+                <span class="card__date">2 августа, 2019</span>
+                <h3 class="card__title">Национальное достояние – парки</h3>
+                <p class="card__text">В 2016 году Америка отмечала важный юбилей: сто лет назад здесь начала
+                  складываться система национальных парков – охраняемых территорий, где и сегодня каждый может
+                  приобщиться к природе.</p>
+                <span class="card__source">ЛЕНТА.РУ</span>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card__image">
+                <div class="card__backgronud"></div>
+                <div class="card__bookmark_marked"></div>
+                <span class="card__bookmark-notification card__bookmark-notification_loged-in">Войдите, чтобы сохранять статьи</span>
+              </div>
+              <div class="card__content">
+                <span class="card__date">2 августа, 2019</span>
+                <h3 class="card__title">Национальное достояние – парки</h3>
+                <p class="card__text">В 2016 году Америка отмечала важный юбилей: сто лет назад здесь начала
+                  складываться система национальных парков – охраняемых территорий, где и сегодня каждый может
+                  приобщиться к природе.</p>
+                <span class="card__source">ЛЕНТА.РУ</span>
+              </div>
+            </div>
           </div>
           <button class="button results__show-more">Показать еще</button>
         </div>
-        <div class="results__container_search" >
-          <span class=" results__search-text">Идет поиск новостей...</span>
-        </div>
-        <div class="results__container_not-found" >
-          <div class="results__logo"></div>
-          <h3 class="results__subtitle"></h3>
-          <span class="results__text">К сожалению по вашему запросу ничего не найдено.</span>
-        </div>
-      </section>
-
-      <section class="results_search">
-
       </section>
 
       <section class="about">
-        <img class="about__avatar" src="" alt="">
+        <div class="about__photo">
+          <!-- <img src="[object Module]" alt="фото на аватар"> -->
+        </div>
         <div class="about__content">
           <h2 class="about__title">Об авторе</h2>
-          <p class="about__text">Это блок с описанием автора проекта. Здесь следует указать, как вас зовут, чем вы занимаетесь, какими технологиями разработки владеете.
-             Также можно рассказать о процессе обучения в Практикуме, чему вы тут научились, и чем можете помочь потенциальным заказчикам.</p>
+          <p class="about__text">Это блок с описанием автора проекта. Здесь следует указать, как вас зовут, чем вы
+            занимаетесь, какими технологиями разработки владеете.
+            <br>
+            <br>
+            Также можно рассказать о процессе обучения в Практикуме, чему вы тут научились, и чем можете помочь
+            потенциальным заказчикам.</p>
         </div>
       </section>
     </main>
+    <div>
+        <img src="[object Module]" alt="GitHub Logo">
+
+    </div>
     <footer class="footer">
-      <div class="footer__columns">
-        <div class="footer__column copyright">
-          <div class="footer__author">&copy;   2019. Владимир Буланый</div>
-        </div>
-        <div class="footer__column-links">
-            <a class="footer__column-link" href="#">Главная</a>
-            <a class="footer__column-link" href="#">О проектк</a>
-            <a class="footer__column-link" href="#">Яндекс.Практикум</a>
-        </div>
-        <div class="footer__column social">
-            <a class="footer__social-link" href="#"><img class="footer__social-links-logo" src="./imagefacebook_white.svg" alt="facebook logo"></a>
-            <a class="footer__social-link" href="#"><img class="footer__social-links-logo" src="./imagegithub.svg" alt="github logo"></a>
-          </div>
+      <p class="footer__copyright">&copy; 2019. Владимир Буланый</p>
+      <nav>
+        <ul class="footer__menu">
+          <li class="footer__menu-link"><a href="./">Главная</a></li>
+          <li class="footer__menu-link"><a href="./about">О проектке</a></li>
+          <li class="footer__menu-link"><a href="https://praktikum.yandex.ru">Яндекс.Практикум</a></li>
+        </ul>
+      </nav>
+      <div class="footer__social">
+        <a class="footer__social-link" href="https://github.com/VBulanyi/">
+          <!-- <img src="[object Module]" alt="mesto logo" class="logo"> -->
+
+
+        </a>
+        <a class="footer__social-link" href="#">
+          <!-- <img src="[object Module]" alt="Facebook Logo"> -->
+        </a>
       </div>
     </footer>
   </div>
-    <script src="main.aa005ae5a1f1f494b8fd.js"></script>
+  </div>
+  <script src="main.d7c410a9e66739131630.js"></script>
 </body>
+
 </html>
