--- a/src/pages/about/index.html
+++ b/src/pages/about/index.html
@@ -54,16 +54,16 @@
         <h2 class="technology__title">Используемые технологии</h2>
         <div class="technology__container">
           <div class="technology__item">
-            <img class="technology__item-logo" src="../src/images/tech/html.svg" alt="">
+            <img class="technology__item-logo" src="../<%= require('../../images/html.svg')%>" alt="">
           </div>
           <div class="technology__item">
-            <img class="technology__item-logo" src="../<%= require('../../images/tech/html.svg')%>" alt="">
+            <img class="technology__item-logo" src="../<%= require('../../images/css.svg')%>" alt="">
           </div>
           <div class="technology__item">
-            <img class="technology__item-logo" src="../src/images/tech/js.svg" alt="">
+            <img class="technology__item-logo" src="../<%= require('../../images/js.svg')%>" alt="">
           </div>
           <div class="technology__item">
-            <img class="technology__item-logo" src="../src/images/tech/webpack.svg" alt="">
+            <img class="technology__item-logo" src="../<%= require('../../images/webpack.svg')%>" alt="">
           </div>
         </div>
       </div </section> <section class="about">
