--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="author" content="Vladimir Bulanyi">
   <meta name="description" content="Diploma project">
   <title>News Explorer</title>
-  <link rel="stylesheet" href="index.5866e7029a41c9db5507.css">
+  <link rel="stylesheet" href="index.fa583280cf9012e6a41d.css">
 </head>
 
 <body>
@@ -102,8 +102,8 @@
       </section>
 
       <section class="about">
+        <div class="about__wrapper">
         <div class="about__photo">
-          <!-- <img src="[object Module]" alt="фото на аватар"> -->
         </div>
         <div class="about__content">
           <h2 class="about__title">Об авторе</h2>
@@ -114,12 +114,9 @@
             Также можно рассказать о процессе обучения в Практикуме, чему вы тут научились, и чем можете помочь
             потенциальным заказчикам.</p>
         </div>
+        </div>
       </section>
     </main>
-    <div>
-        <img src="[object Module]" alt="GitHub Logo">
-
-    </div>
     <footer class="footer">
       <p class="footer__copyright">&copy; 2019. Владимир Буланый</p>
       <nav>
@@ -131,18 +128,16 @@
       </nav>
       <div class="footer__social">
         <a class="footer__social-link" href="https://github.com/VBulanyi/">
-          <!-- <img src="[object Module]" alt="mesto logo" class="logo"> -->
-
-
+          <img src="./src/images/git.svg" alt="GitHub Logo">
         </a>
-        <a class="footer__social-link" href="#">
-          <!-- <img src="[object Module]" alt="Facebook Logo"> -->
+        <a class="footer__social-link" href="https://facebook.com">
+          <img src="./src/images/facebook.svg" alt="Facebook Logo">
         </a>
       </div>
     </footer>
   </div>
   </div>
-  <script src="main.d7c410a9e66739131630.js"></script>
+  <script src="main.757988de230aa89db11b.js"></script>
 </body>
 
 </html>
