--- a/about/index.html
+++ b/about/index.html
@@ -6,7 +6,7 @@
   <title>News Explorer</title>
   <meta name="author" content="Vladimir Bulanyi">
   <meta name="description" content="Diploma project">
-  <link rel="stylesheet" href="../index.584e8bb617f14978e066.css?d7c410a9e66739131630">
+  <link rel="stylesheet" href="../index.29ad872d9d8cfb66624c.css?757988de230aa89db11b">
 </head>
 
 <body>
@@ -21,8 +21,9 @@
           <li class="menu__item"><a class="menu__column-link menu__colunm-link_black" href="../news/">Сохранённые
               статьи</a></li>
           <li class="menu__item"><a
-              class="menu__column-link menu__colunm-link_black menu__link-auth menu__link-auth_black" href="">Грета
-              [-></a></li>
+              class="menu__column-link menu__colunm-link_black menu__link-auth menu__link-auth_black" href="#">Грета<img
+                class="menu__logout-icon" src="../src/images/logout.svg" alt="logout icon">
+            </a></li>
         </ul>
       </nav>
     </header>
@@ -53,41 +54,119 @@
         <h2 class="technology__title">Используемые технологии</h2>
         <div class="technology__container">
           <div class="technology__item">
-            <span class="technology__item-name">HTML</span>
-            <img class="technology__item-logo" src="" alt="">
+            <img class="technology__item-logo" src="../[object Module]" alt="">
           </div>
           <div class="technology__item">
-            <span class="technology__item-name">CSS</span>
-            <img class="technology__item-logo" src="" alt="">
+            <img class="technology__item-logo" src="../[object Module]" alt="">
           </div>
           <div class="technology__item">
-            <span class="technology__item-name">Java Script</span>
-            <img class="technology__item-logo" src="" alt="">
+            <img class="technology__item-logo" src="../[object Module]" alt="">
           </div>
           <div class="technology__item">
-            <span class="technology__item-name">Webpack</span>
-            <img class="technology__item-logo" src="" alt="">
+            <img class="technology__item-logo" src="../[object Module]" alt="">
           </div>
         </div>
-      </div </section>
-      <section class="about">
-          <div class="about__photo">
-
-<!-- ФОТО -->
-
-
+      </div </section> <section class="about">
+      <div class="about__wrapper">
+        <div class="about__photo">
+        </div>
+        <div class="about__content">
+          <h2 class="about__title">Об авторе</h2>
+          <p class="about__text">Это блок с описанием автора проекта. Здесь следует указать, как вас зовут, чем вы
+            занимаетесь, какими технологиями разработки владеете.
+            <br>
+            <br>
+            Также можно рассказать о процессе обучения в Практикуме, чему вы тут научились, и чем можете помочь
+            потенциальным заказчикам.</p>
+        </div>
+      </div>
+    </section>
+    <section class="slider">
+      <div class="slider__title-container">
+        <h2 class="slider__title">История коммитов из GitHub</h2>
+        <a class="slider__git-link" href="https://github.com/VBulanyi/">Открыть в Github &gt;</a>
+      </div>
+      <div class="swiper-container">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <span class="slider__date">14 августа, 2019</span>
+            <div class="slider__author">
+              <img class="slider__photo" src="../src/images/photos/image-01.jpg" alt="фото">
+              <div class="slider__author-box">
+                <h3 class="slider__auther-name">Антон Долинин</h3>
+                <span class="slider__auther-email">anton@yandex.ru</span>
+              </div>
+            </div>
+            <p class="slider__text">Emmet (formerly Zen Coding) is a web-
+              developer’s toolkit that can greatly improve your HTML & CSS workflow.</p>
           </div>
-          <div class="about__content">
-            <h2 class="about__title">Об авторе</h2>
-            <p class="about__text">Это блок с описанием автора проекта. Здесь следует указать, как вас зовут, чем вы
-              занимаетесь, какими технологиями разработки владеете.
-              <br>
-              <br>
-              Также можно рассказать о процессе обучения в Практикуме, чему вы тут научились, и чем можете помочь
-              потенциальным заказчикам.</p>
+          <div class="swiper-slide">
+            <span class="slider__date">14 августа, 2019</span>
+            <div class="slider__author">
+              <img class="slider__photo" src="../src/images/photos/image-01.jpg" alt="фото">
+              <div class="slider__author-box">
+                <h3 class="slider__auther-name">Антон Долинин</h3>
+                <span class="slider__auther-email">anton@yandex.ru</span>
+              </div>
+            </div>
+            <p class="slider__text">Emmet (formerly Zen Coding) is a web-
+              developer’s toolkit that can greatly improve your HTML & CSS workflow.</p>
           </div>
-        </section>
-      <footer class="footer">
+          <div class="swiper-slide">
+            <span class="slider__date">14 августа, 2019</span>
+            <div class="slider__author">
+              <img class="slider__photo" src="../src/images/photos/image-01.jpg" alt="фото">
+              <div class="slider__author-box">
+                <h3 class="slider__auther-name">Антон Долинин</h3>
+                <span class="slider__auther-email">anton@yandex.ru</span>
+              </div>
+            </div>
+            <p class="slider__text">Emmet (formerly Zen Coding) is a web-
+              developer’s toolkit that can greatly improve your HTML & CSS workflow.</p>
+          </div>
+          <div class="swiper-slide">
+            <span class="slider__date">14 августа, 2019</span>
+            <div class="slider__author">
+              <img class="slider__photo" src="../src/images/photos/image-01.jpg" alt="фото">
+              <div class="slider__author-box">
+                <h3 class="slider__auther-name">Антон Долинин</h3>
+                <span class="slider__auther-email">anton@yandex.ru</span>
+              </div>
+            </div>
+            <p class="slider__text">Emmet (formerly Zen Coding) is a web-
+              developer’s toolkit that can greatly improve your HTML & CSS workflow.</p>
+          </div>
+          <div class="swiper-slide">
+            <span class="slider__date">14 августа, 2019</span>
+            <div class="slider__author">
+              <img class="slider__photo" src="../src/images/photos/image-01.jpg" alt="фото">
+              <div class="slider__author-box">
+                <h3 class="slider__auther-name">Антон Долинин</h3>
+                <span class="slider__auther-email">anton@yandex.ru</span>
+              </div>
+            </div>
+            <p class="slider__text">Emmet (formerly Zen Coding) is a web-
+              developer’s toolkit that can greatly improve your HTML & CSS workflow.</p>
+          </div>
+          <div class="swiper-slide">
+            <span class="slider__date">14 августа, 2019</span>
+            <div class="slider__author">
+              <img class="slider__photo" src="../src/images/photos/image-01.jpg" alt="фото">
+              <div class="slider__author-box">
+                <h3 class="slider__auther-name">Антон Долинин</h3>
+                <span class="slider__auther-email">anton@yandex.ru</span>
+              </div>
+            </div>
+            <p class="slider__text">Emmet (formerly Zen Coding) is a web-
+              developer’s toolkit that can greatly improve your HTML & CSS workflow.</p>
+          </div>>
+        </div>
+        <div class="swiper-pagination"></div>
+      </div>
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-button-next"></div>
+    </section>
+    <footer class="footer">
       <p class="footer__copyright footer__copyright_grey">&copy; 2019. Владимир Буланый</p>
       <nav>
         <ul class="footer__menu">
@@ -97,12 +176,15 @@
         </ul>
       </nav>
       <div class="footer__social">
-        <!-- Вставить картинки GIT FB -->
-        <a class="footer__social-link" href="https://github.com/VBulanyi/"></a>
-        <a class="footer__social-link" href="#"></a>
+        <a class="footer__social-link" href="https://github.com/VBulanyi/">
+          <img src="../src/images/git.svg" alt="GitHub Logo">
+        </a>
+        <a class="footer__social-link" href="https://facebook.com">
+          <img src="../src/images/facebook.svg" alt="Facebook Logo">
+        </a>
       </div>
-      </footer>
-      <script src="../about/about.d7c410a9e66739131630.js?d7c410a9e66739131630"></script>
+    </footer>
+    <script src="../about/about.757988de230aa89db11b.js?757988de230aa89db11b"></script>
   </div>
 </body>
 
