--- a/about/index.html
+++ b/about/index.html
@@ -6,7 +6,7 @@
   <title>News Explorer</title>
   <meta name="author" content="Vladimir Bulanyi">
   <meta name="description" content="Diploma project">
-  <link rel="stylesheet" href="../index.29ad872d9d8cfb66624c.css?757988de230aa89db11b">
+  <link rel="stylesheet" href="../index.29ad872d9d8cfb66624c.css?2ccc9cc24783dd11bd7c">
 </head>
 
 <body>
@@ -54,16 +54,16 @@
         <h2 class="technology__title">Используемые технологии</h2>
         <div class="technology__container">
           <div class="technology__item">
-            <img class="technology__item-logo" src="../[object Module]" alt="">
+            <img class="technology__item-logo" src="../src/images/html.svg" alt="">
           </div>
           <div class="technology__item">
-            <img class="technology__item-logo" src="../[object Module]" alt="">
+            <img class="technology__item-logo" src="../src/images/css.svg" alt="">
           </div>
           <div class="technology__item">
-            <img class="technology__item-logo" src="../[object Module]" alt="">
+            <img class="technology__item-logo" src="../src/images/js.svg" alt="">
           </div>
           <div class="technology__item">
-            <img class="technology__item-logo" src="../[object Module]" alt="">
+            <img class="technology__item-logo" src="../src/images/webpack.svg" alt="">
           </div>
         </div>
       </div </section> <section class="about">
@@ -184,7 +184,7 @@
         </a>
       </div>
     </footer>
-    <script src="../about/about.757988de230aa89db11b.js?757988de230aa89db11b"></script>
+    <script src="../about/about.2ccc9cc24783dd11bd7c.js?2ccc9cc24783dd11bd7c"></script>
   </div>
 </body>
 
