--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="popup-form">
       <div class="popup popupAdd">
         <div class="popup__content">
-          <img id="formAddClose" src="[object Module]" alt="" class="popup__close">
+          <img id="formAddClose" src="./src/images/close.svg" alt="" class="popup__close">
           <h3 class="popup__title">Вход</h3>
           <form id="formAdd" class="popup__form" name="new">
             <span class="popup__tip">Email</span>
@@ -162,7 +162,7 @@
     </footer>
   </div>
   </div>
-  <script src="main.2ccc9cc24783dd11bd7c.js"></script>
+  <script src="main.c58b8ae5241d876dce92.js"></script>
 </body>
 
 </html>
