--- a/about/index.html
+++ b/about/index.html
@@ -6,7 +6,7 @@
   <title>News Explorer</title>
   <meta name="author" content="Vladimir Bulanyi">
   <meta name="description" content="Diploma project">
-  <link rel="stylesheet" href="../index.29ad872d9d8cfb66624c.css?c58b8ae5241d876dce92">
+  <link rel="stylesheet" href="../index.29ad872d9d8cfb66624c.css?0beb3b7ede9670b91de2">
 </head>
 
 <body>
@@ -54,16 +54,16 @@
         <h2 class="technology__title">Используемые технологии</h2>
         <div class="technology__container">
           <div class="technology__item">
-            <img class="technology__item-logo" src="../src/images/html.svg" alt="">
+            <img class="technology__item-logo" src=".././src/images/html.svg" alt="">
           </div>
           <div class="technology__item">
-            <img class="technology__item-logo" src="../src/images/css.svg" alt="">
+            <img class="technology__item-logo" src=".././src/images/css.svg" alt="">
           </div>
           <div class="technology__item">
-            <img class="technology__item-logo" src="../src/images/js.svg" alt="">
+            <img class="technology__item-logo" src=".././src/images/js.svg" alt="">
           </div>
           <div class="technology__item">
-            <img class="technology__item-logo" src="../src/images/webpack.svg" alt="">
+            <img class="technology__item-logo" src=".././src/images/webpack.svg" alt="">
           </div>
         </div>
       </div </section> <section class="about">
@@ -91,7 +91,7 @@
           <div class="swiper-slide">
             <span class="slider__date">14 августа, 2019</span>
             <div class="slider__author">
-              <img class="slider__photo" src="../src/images/photos/image-01.jpg" alt="фото">
+              <img class="slider__photo" src=".././src/images/image-01.jpg" alt="фото">
               <div class="slider__author-box">
                 <h3 class="slider__auther-name">Антон Долинин</h3>
                 <span class="slider__auther-email">anton@yandex.ru</span>
@@ -103,7 +103,7 @@
           <div class="swiper-slide">
             <span class="slider__date">14 августа, 2019</span>
             <div class="slider__author">
-              <img class="slider__photo" src="../src/images/photos/image-01.jpg" alt="фото">
+              <img class="slider__photo" src=".././src/images/image-01.jpg" alt="фото">
               <div class="slider__author-box">
                 <h3 class="slider__auther-name">Антон Долинин</h3>
                 <span class="slider__auther-email">anton@yandex.ru</span>
@@ -115,7 +115,7 @@
           <div class="swiper-slide">
             <span class="slider__date">14 августа, 2019</span>
             <div class="slider__author">
-              <img class="slider__photo" src="../src/images/photos/image-01.jpg" alt="фото">
+              <img class="slider__photo" src=".././src/images/image-01.jpg" alt="фото">
               <div class="slider__author-box">
                 <h3 class="slider__auther-name">Антон Долинин</h3>
                 <span class="slider__auther-email">anton@yandex.ru</span>
@@ -127,7 +127,7 @@
           <div class="swiper-slide">
             <span class="slider__date">14 августа, 2019</span>
             <div class="slider__author">
-              <img class="slider__photo" src="../src/images/photos/image-01.jpg" alt="фото">
+              <img class="slider__photo" src=".././src/images/image-01.jpg" alt="фото">
               <div class="slider__author-box">
                 <h3 class="slider__auther-name">Антон Долинин</h3>
                 <span class="slider__auther-email">anton@yandex.ru</span>
@@ -139,7 +139,7 @@
           <div class="swiper-slide">
             <span class="slider__date">14 августа, 2019</span>
             <div class="slider__author">
-              <img class="slider__photo" src="../src/images/photos/image-01.jpg" alt="фото">
+              <img class="slider__photo" src=".././src/images/image-01.jpg" alt="фото">
               <div class="slider__author-box">
                 <h3 class="slider__auther-name">Антон Долинин</h3>
                 <span class="slider__auther-email">anton@yandex.ru</span>
@@ -151,7 +151,7 @@
           <div class="swiper-slide">
             <span class="slider__date">14 августа, 2019</span>
             <div class="slider__author">
-              <img class="slider__photo" src="../src/images/photos/image-01.jpg" alt="фото">
+              <img class="slider__photo" src=".././src/images/image-01.jpg" alt="фото">
               <div class="slider__author-box">
                 <h3 class="slider__auther-name">Антон Долинин</h3>
                 <span class="slider__auther-email">anton@yandex.ru</span>
@@ -177,14 +177,14 @@
       </nav>
       <div class="footer__social">
         <a class="footer__social-link" href="https://github.com/VBulanyi/">
-          <img src="../src/images/git.svg" alt="GitHub Logo">
+          <img src=".././src/images/git.svg" alt="GitHub Logo">
         </a>
         <a class="footer__social-link" href="https://facebook.com">
-          <img src="../src/images/facebook.svg" alt="Facebook Logo">
+          <img src=".././src/images/facebook.svg" alt="Facebook Logo">
         </a>
       </div>
     </footer>
-    <script src="../about/about.c58b8ae5241d876dce92.js?c58b8ae5241d876dce92"></script>
+    <script src="../about/about.0beb3b7ede9670b91de2.js?0beb3b7ede9670b91de2"></script>
   </div>
 </body>
 
