--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <span class="preloader__search-text">Идет поиск новостей...</span>
         </div>
         <div class="preloader__wrapper preloader__wrapper_not-found">
-          <!-- <img class="preloader__not-found-img" src="/src/images/not-found.svg" alt="Картинка ничего не найдено"> -->
+          <img class="preloader__not-found-img" src="./src/images/not-found.svg"   alt="Картинка ничего не найдено">
           <h3 class="preloader__search-title">Ничего не найдено</h3>
           <span class="preloader__search-text">К сожалению по вашему запросу
             ничего не найдено...</span>
@@ -162,7 +162,7 @@
     </footer>
   </div>
   </div>
-  <script src="main.c58b8ae5241d876dce92.js"></script>
+  <script src="main.0beb3b7ede9670b91de2.js"></script>
 </body>
 
 </html>
