--- a/about/index.html
+++ b/about/index.html
@@ -6,7 +6,7 @@
   <title>News Explorer</title>
   <meta name="author" content="Vladimir Bulanyi">
   <meta name="description" content="Diploma project">
-  <link rel="stylesheet" href="../index.29ad872d9d8cfb66624c.css?0beb3b7ede9670b91de2">
+  <link rel="stylesheet" href="../index.29ad872d9d8cfb66624c.css?0cd404e63987fb05c3e4">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
               статьи</a></li>
           <li class="menu__item"><a
               class="menu__column-link menu__colunm-link_black menu__link-auth menu__link-auth_black" href="#">Грета<img
-                class="menu__logout-icon" src="../src/images/logout.svg" alt="logout icon">
+                class="menu__logout-icon" src=".././src/images/logout.svg">
             </a></li>
         </ul>
       </nav>
@@ -184,7 +184,7 @@
         </a>
       </div>
     </footer>
-    <script src="../about/about.0beb3b7ede9670b91de2.js?0beb3b7ede9670b91de2"></script>
+    <script src="../about/about.0cd404e63987fb05c3e4.js?0cd404e63987fb05c3e4"></script>
   </div>
 </body>
 
