--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           </form>
         </div>
     </div>
-    <div class="popup-form">
+    <div class="popup-form" hidden>
       <div class="popup popupAdd">
         <div class="popup__content">
           <img id="formAddClose" src="./src/images/close.svg" alt="" class="popup__close">
@@ -57,10 +57,10 @@
     </header>
     <main>
       <section class="preloader">
-        <div class="preloader__wrapper preloader__wrapper_search">
+        <!-- <div class="preloader__wrapper preloader__wrapper_search">
           <i class="preloader__circle"></i>
           <span class="preloader__search-text">Идет поиск новостей...</span>
-        </div>
+        </div> -->
         <div class="preloader__wrapper preloader__wrapper_not-found">
           <img class="preloader__not-found-img" src="./src/images/not-found.svg"   alt="Картинка ничего не найдено">
           <h3 class="preloader__search-title">Ничего не найдено</h3>
@@ -162,7 +162,7 @@
     </footer>
   </div>
   </div>
-  <script src="main.0beb3b7ede9670b91de2.js"></script>
+  <script src="main.0cd404e63987fb05c3e4.js"></script>
 </body>
 
 </html>
