--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="author" content="Vladimir Bulanyi">
   <meta name="description" content="Diploma project">
   <title>News Explorer</title>
-  <link rel="stylesheet" href="index.9a7c2fd36dda7efb1073.css">
+  <link rel="stylesheet" href="index.701128088a680525a2e9.css">
 </head>
 
 <body>
@@ -33,7 +33,7 @@
           </form>
         </div>
     </div>
-    <div class="popup-form" hidden>
+    <div class="popup-form">
       <div class="popup popupAdd">
         <div class="popup__content">
           <img id="formAddClose" src="./src/images/close.svg" alt="" class="popup__close">
@@ -162,7 +162,7 @@
     </footer>
   </div>
   </div>
-  <script src="main.0cd404e63987fb05c3e4.js"></script>
+  <script src="main.d73c2370201d22d45ea9.js"></script>
 </body>
 
 </html>
