--- a/about/index.html
+++ b/about/index.html
@@ -6,7 +6,7 @@
   <title>News Explorer</title>
   <meta name="author" content="Vladimir Bulanyi">
   <meta name="description" content="Diploma project">
-  <link rel="stylesheet" href="../index.29ad872d9d8cfb66624c.css?d73c2370201d22d45ea9">
+  <link rel="stylesheet" href="../index.43c7783e8dca2486513b.css?384495e6ea22b6a6b5ef">
 </head>
 
 <body>
@@ -165,6 +165,7 @@
       </div>
       <div class="swiper-button-prev"></div>
       <div class="swiper-button-next"></div>
+      <a class="slider__git-link_mobile menu__link-auth   " href="https://github.com/VBulanyi/">Открыть в Github</a>
     </section>
     <footer class="footer">
       <p class="footer__copyright footer__copyright_grey">&copy; 2019. Владимир Буланый</p>
@@ -184,8 +185,7 @@
         </a>
       </div>
     </footer>
-    <script src="../about/about.d73c2370201d22d45ea9.js?d73c2370201d22d45ea9"></script>
+    <script src="../about/about.384495e6ea22b6a6b5ef.js?384495e6ea22b6a6b5ef"></script>
   </div>
 </body>
-
 </html>
