--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="author" content="Vladimir Bulanyi">
   <meta name="description" content="Diploma project">
   <title>News Explorer</title>
-  <link rel="stylesheet" href="index.701128088a680525a2e9.css">
+  <link rel="stylesheet" href="index.715137ed7d62511094be.css">
 </head>
 
 <body>
@@ -42,12 +42,12 @@
             <span class="popup__tip">Email</span>
             <input required id="formAddName" type="email" name="name" class="popup__input popup__input_type_name"
               placeholder="Введите почту">
-            <span id="errorAddName" class="error" aria-live="polite"></span>
+            <span class="popup__input-name-err" id="errorAddName" class="error" aria-live="polite">Неправильный формат email</span>
             <span class="popup__tip">Пароль</span>
             <input id="formAddUrl" required type="text" min="8" name="link"
               class="popup__input popup__input_type_link-url" placeholder="Введите пароль">
             <span id="errorAddUrl" class="error" aria-live="polite"></span>
-            <button id="addSbmBtn" type="submit" class="popup__button" disabled>Войти</button>
+            <button id="addSbmBtn" type="submit" class="popup__button" >Войти</button>
           </form>
           <div class="popup__reg">
           <span>или </span><a class="popup__reg-link" href="">Зарегистрироваться</a></div>
@@ -162,7 +162,7 @@
     </footer>
   </div>
   </div>
-  <script src="main.d73c2370201d22d45ea9.js"></script>
+  <script src="main.384495e6ea22b6a6b5ef.js"></script>
 </body>
 
 </html>
