--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                 <span class="popup__tip">Email</span>
                 <input required id="formAddName" type="email" name="name" class="popup__input popup__input_type_name"
                   placeholder="Введите почту">
-                <span class="popup__input-name-err" id="errorAddName" class="error" aria-live="polite">Неправильный формат email</span>
+                <span class="popup__input-name-err" id="errorAddName"  aria-live="polite">Неправильный формат email</span>
                 <span class="popup__tip">Пароль</span>
-                <input id="formAddUrl" required type="text" min="8" name="link"
+                <input id="formAddUrl" required type="text" minlength="8" name="link"
                   class="popup__input popup__input_type_link-url" placeholder="Введите пароль">
                  <button id="addSbmBtn" type="submit" class="popup__button">Войти</button>
               </form>
@@ -164,7 +164,7 @@
       </footer>
     </div>
   </div>
-  <script src="main.01f9c5c306fd0c6bed5e.js"></script>
+  <script src="main.b721497b1da9e723b077.js"></script>
 </body>
 
 </html>
