--- a/about/index.html
+++ b/about/index.html
@@ -6,7 +6,7 @@
   <title>News Explorer</title>
   <meta name="author" content="Vladimir Bulanyi">
   <meta name="description" content="Diploma project">
-  <link rel="stylesheet" href="../index.43c7783e8dca2486513b.css?01f9c5c306fd0c6bed5e">
+  <link rel="stylesheet" href="../index.43c7783e8dca2486513b.css?b721497b1da9e723b077">
 </head>
 
 <body>
@@ -187,7 +187,7 @@
         </a>
       </div>
     </footer>
-    <script src="../about/about.01f9c5c306fd0c6bed5e.js?01f9c5c306fd0c6bed5e"</script>
+    <script src="../about/about.b721497b1da9e723b077.js?b721497b1da9e723b077"></script>
   </div>
 </body>
 </html>
