--- a/about/index.html
+++ b/about/index.html
@@ -6,7 +6,7 @@
   <title>News Explorer</title>
   <meta name="author" content="Vladimir Bulanyi">
   <meta name="description" content="Diploma project">
-  <link rel="stylesheet" href="../index.43c7783e8dca2486513b.css?b721497b1da9e723b077">
+  <link rel="stylesheet" href="../index.cd0bb8ec31352e228ba9.css?026492e7707000314f95">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
               статьи</a></li>
           <li class="menu__item"><a
               class="menu__column-link menu__colunm-link_black menu__link-auth menu__link-auth_black" href="#">Грета<img
-                class="menu__logout-icon" src=".././src/images/logout.svg" alt="logout button">
+                class="menu__logout-icon" src=".././images/logout.svg" alt="logout button">
             </a></li>
         </ul>
       </nav>
@@ -54,16 +54,16 @@
         <h2 class="technology__title">Используемые технологии</h2>
         <div class="technology__container">
           <div class="technology__item">
-            <img class="technology__item-logo" src=".././src/images/html.svg" alt="">
+            <img class="technology__item-logo" src=".././images/html.svg" alt="">
           </div>
           <div class="technology__item">
-            <img class="technology__item-logo" src=".././src/images/css.svg" alt="">
+            <img class="technology__item-logo" src=".././images/css.svg" alt="">
           </div>
           <div class="technology__item">
-            <img class="technology__item-logo" src=".././src/images/js.svg" alt="">
+            <img class="technology__item-logo" src=".././images/js.svg" alt="">
           </div>
           <div class="technology__item">
-            <img class="technology__item-logo" src=".././src/images/webpack.svg" alt="">
+            <img class="technology__item-logo" src=".././images/webpack.svg" alt="">
           </div>
         </div>
       </div>
@@ -93,7 +93,7 @@
           <div class="swiper-slide">
             <span class="slider__date">14 августа, 2019</span>
             <div class="slider__author">
-              <img class="slider__photo" src=".././src/images/image-01.jpg" alt="фото">
+              <img class="slider__photo" src=".././images/image-01.jpg" alt="фото">
               <div class="slider__author-box">
                 <h3 class="slider__auther-name">Антон Долинин</h3>
                 <span class="slider__auther-email">anton@yandex.ru</span>
@@ -105,7 +105,7 @@
           <div class="swiper-slide">
             <span class="slider__date">14 августа, 2019</span>
             <div class="slider__author">
-              <img class="slider__photo" src=".././src/images/image-01.jpg" alt="фото">
+              <img class="slider__photo" src=".././images/image-01.jpg" alt="фото">
               <div class="slider__author-box">
                 <h3 class="slider__auther-name">Антон Долинин</h3>
                 <span class="slider__auther-email">anton@yandex.ru</span>
@@ -117,7 +117,7 @@
           <div class="swiper-slide">
             <span class="slider__date">14 августа, 2019</span>
             <div class="slider__author">
-              <img class="slider__photo" src=".././src/images/image-01.jpg" alt="фото">
+              <img class="slider__photo" src=".././images/image-01.jpg" alt="фото">
               <div class="slider__author-box">
                 <h3 class="slider__auther-name">Антон Долинин</h3>
                 <span class="slider__auther-email">anton@yandex.ru</span>
@@ -129,7 +129,7 @@
           <div class="swiper-slide">
             <span class="slider__date">14 августа, 2019</span>
             <div class="slider__author">
-              <img class="slider__photo" src=".././src/images/image-01.jpg" alt="фото">
+              <img class="slider__photo" src=".././images/image-01.jpg" alt="фото">
               <div class="slider__author-box">
                 <h3 class="slider__auther-name">Антон Долинин</h3>
                 <span class="slider__auther-email">anton@yandex.ru</span>
@@ -141,7 +141,7 @@
           <div class="swiper-slide">
             <span class="slider__date">14 августа, 2019</span>
             <div class="slider__author">
-              <img class="slider__photo" src=".././src/images/image-01.jpg" alt="фото">
+              <img class="slider__photo" src=".././images/image-01.jpg" alt="фото">
               <div class="slider__author-box">
                 <h3 class="slider__auther-name">Антон Долинин</h3>
                 <span class="slider__auther-email">anton@yandex.ru</span>
@@ -153,7 +153,7 @@
           <div class="swiper-slide">
             <span class="slider__date">14 августа, 2019</span>
             <div class="slider__author">
-              <img class="slider__photo" src=".././src/images/image-01.jpg" alt="фото">
+              <img class="slider__photo" src=".././images/image-01.jpg" alt="фото">
               <div class="slider__author-box">
                 <h3 class="slider__auther-name">Антон Долинин</h3>
                 <span class="slider__auther-email">anton@yandex.ru</span>
@@ -180,14 +180,14 @@
       </nav>
       <div class="footer__social">
         <a class="footer__social-link" href="https://github.com/VBulanyi/">
-          <img src=".././src/images/git.svg" alt="GitHub Logo">
+          <img src=".././images/git.svg" alt="GitHub Logo">
         </a>
         <a class="footer__social-link" href="https://facebook.com">
-          <img src=".././src/images/facebook.svg" alt="Facebook Logo">
+          <img src=".././images/facebook.svg" alt="Facebook Logo">
         </a>
       </div>
     </footer>
-    <script src="../about/about.b721497b1da9e723b077.js?b721497b1da9e723b077"></script>
+    <script src="../about/about.026492e7707000314f95.js?026492e7707000314f95"></script>
   </div>
 </body>
 </html>
