--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="author" content="Vladimir Bulanyi">
   <meta name="description" content="Diploma project">
   <title>News Explorer</title>
-  <link rel="stylesheet" href="index.715137ed7d62511094be.css">
+  <link rel="stylesheet" href="index.3b91e28ec34ccf181def.css">
 </head>
 
 <body>
@@ -35,7 +35,7 @@
         <div class="popup-form">
           <div class="popup popupAdd">
             <div class="popup__content">
-              <img id="formAddClose" src="./src/images/close.svg" alt="" class="popup__close">
+              <img id="formAddClose" src="./images/close.svg" alt="" class="popup__close">
               <h3 class="popup__title">Вход</h3>
               <form id="formAdd" class="popup__form" name="new">
                 <span class="popup__tip">Email</span>
@@ -60,7 +60,7 @@
           <span class="preloader__search-text">Идет поиск новостей...</span>
         </div> -->
           <div class="preloader__wrapper preloader__wrapper_not-found">
-            <img class="preloader__not-found-img" src="./src/images/not-found.svg"
+            <img class="preloader__not-found-img" src="./images/not-found.svg"
               alt="Картинка ничего не найдено">
             <h3 class="preloader__search-title">Ничего не найдено</h3>
             <span class="preloader__search-text">К сожалению по вашему запросу
@@ -155,16 +155,16 @@
         </nav>
         <div class="footer__social">
           <a class="footer__social-link" href="https://github.com/VBulanyi/">
-            <img src="./src/images/git.svg" alt="GitHub Logo">
+            <img src="./images/git.svg" alt="GitHub Logo">
           </a>
           <a class="footer__social-link" href="https://facebook.com">
-            <img src="./src/images/facebook.svg" alt="Facebook Logo">
+            <img src="./images/facebook.svg" alt="Facebook Logo">
           </a>
         </div>
       </footer>
     </div>
   </div>
-  <script src="main.b721497b1da9e723b077.js"></script>
+  <script src="main.026492e7707000314f95.js"></script>
 </body>
 
 </html>
