--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="author" content="Vladimir Bulanyi">
   <meta name="description" content="Diploma project">
   <title>News Explorer</title>
-  <link rel="stylesheet" href="index.3b91e28ec34ccf181def.css">
+  <link rel="stylesheet" href="index.a493c5e9faea9d087eb2.css">
 </head>
 
 <body>
-  <div class="page">
+<div class="page">
     <div class="content">
-      <header class="header">
+<header class="header">
         <nav class="menu">
           <a class="menu__logo" href="./">NewsExplorer</a>
           <ul class="menu__column-links">
@@ -53,12 +55,12 @@
           </div>
         </div>
       </header>
-      <main>
-        <section class="preloader">
-          <!-- <div class="preloader__wrapper preloader__wrapper_search">
+<main>
+  <section class="preloader">
+          <div class="preloader__wrapper preloader__wrapper_search">
           <i class="preloader__circle"></i>
           <span class="preloader__search-text">Идет поиск новостей...</span>
-        </div> -->
+        </div>
           <div class="preloader__wrapper preloader__wrapper_not-found">
             <img class="preloader__not-found-img" src="./images/not-found.svg"
               alt="Картинка ничего не найдено">
@@ -66,9 +68,9 @@
             <span class="preloader__search-text">К сожалению по вашему запросу
               ничего не найдено...</span>
           </div>
-        </section>
+        </section> -->
 
-        <section class="results">
+  <!-- <section class="results">
           <div class="results__main-container">
             <h2 class="results__title">Результаты поиска</h2>
             <div class="results__continer">
@@ -143,8 +145,8 @@
             </div>
           </div>
         </section>
-      </main>
-      <footer class="footer">
+</main>
+<footer class="footer">
         <p class="footer__copyright">&copy; 2019. Владимир Буланый</p>
         <nav>
           <ul class="footer__menu">
@@ -162,9 +164,9 @@
           </a>
         </div>
       </footer>
-    </div>
+</div>
   </div>
-  <script src="main.026492e7707000314f95.js"></script>
-</body>
+<script src="main.3ef0691aedcd4fc74ee6.js"></script>
+<!-- </body> -->
 
 </html>
