--- a/about/index.html
+++ b/about/index.html
@@ -3,10 +3,12 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>News Explorer</title>
   <meta name="author" content="Vladimir Bulanyi">
   <meta name="description" content="Diploma project">
-  <link rel="stylesheet" href="../index.cd0bb8ec31352e228ba9.css?026492e7707000314f95">
+  <link rel="stylesheet" href="../index.e12c302cee5f737e1c4d.css?3ef0691aedcd4fc74ee6">
 </head>
 
 <body>
@@ -187,7 +189,7 @@
         </a>
       </div>
     </footer>
-    <script src="../about/about.026492e7707000314f95.js?026492e7707000314f95"></script>
+    <script src="../about/about.3ef0691aedcd4fc74ee6.js?3ef0691aedcd4fc74ee6"></script>
   </div>
 </body>
 </html>
