--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
             <span class="preloader__search-text">К сожалению по вашему запросу
               ничего не найдено...</span>
           </div>
-        </section> -->
+        </section>
 
-  <!-- <section class="results">
+   <section class="results">
           <div class="results__main-container">
             <h2 class="results__title">Результаты поиска</h2>
             <div class="results__continer">
@@ -166,7 +166,7 @@
       </footer>
 </div>
   </div>
-<script src="main.3ef0691aedcd4fc74ee6.js"></script>
-<!-- </body> -->
+<script src="main.a72dbd35449fbd50f982.js"></script>
+</body>
 
 </html>
