--- a/src/pages/about/index.html
+++ b/src/pages/about/index.html
@@ -22,7 +22,7 @@
               статьи</a></li>
           <li class="menu__item"><a
               class="menu__column-link menu__colunm-link_black menu__link-auth menu__link-auth_black" href="#">Грета<img
-                class="menu__logout-icon" src="../<%= require('../../images/logout.svg')%>">
+                class="menu__logout-icon" src="../<%= require('../../images/logout.svg')%>" alt="logout button">
             </a></li>
         </ul>
       </nav>
@@ -66,7 +66,9 @@
             <img class="technology__item-logo" src="../<%= require('../../images/webpack.svg')%>" alt="">
           </div>
         </div>
-      </div </section> <section class="about">
+      </div>
+    </section>
+    <section class="about">
       <div class="about__wrapper">
         <div class="about__photo">
         </div>
